# TelegramSimpleBot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alembic  Dockerfile.server  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: db.py  func.py  handlers.py  keyboards.py  logger.py  main.py  middlewares.py  models.py
app/alembic/: env.py
app/alembic/versions/: 2376fa31bfbf_.py  accf87e1222f_.py  cffefecefeb9_.py  f632409af728_.py
app/data/: facts.txt
data/: jokes.txt
postgres/: Dockerfile
server/: app.py  middleware.py  success.html
