[project]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = [
    {name = "BigBirden",email = "karljonson22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiogram (==3.20.0.post0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.11.18)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "astroid (==3.3.10)",
    "attrs (==25.3.0)",
    "black (==25.1.0)",
    "certifi (==2025.4.26)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "dill (==0.4.0)",
    "frozenlist (==1.6.2)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "isort (==6.0.1)",
    "magic-filter (==1.0.12)",
    "mccabe (==0.7.0)",
    "multidict (==6.4.4)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "propcache (==0.3.1)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.1)",
    "pylint (==3.3.7)",
    "pytest (==8.4.0)",
    "tomlkit (==0.13.3)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "yarl (==1.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
