[project]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = [
    {name = "BigBirden",email = "karljonson22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiogram (==3.20.0.post0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.11.18)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "astroid (==3.3.10)",
    "attrs (==25.3.0)",
    "black (==25.1.0)",
    "certifi (==2025.4.26)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "dill (==0.4.0)",
    "frozenlist (==1.6.2)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "isort (==6.0.1)",
    "magic-filter (==1.0.12)",
    "mccabe (==0.7.0)",
    "multidict (==6.4.4)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "propcache (==0.3.1)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.1)",
    "pylint (==3.3.7)",
    "pytest (==8.4.0)",
    "tomlkit (==0.13.3)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "yarl (==1.20.0)",
    "anyio (==4.9.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "charset-normalizer (==3.4.2)",
    "cleo (==2.1.0)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "keyring (==25.6.0)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.0)",
    "pbs-installer (==2025.6.4)",
    "pkginfo (==1.12.1.2)",
    "poetry (==2.1.3)",
    "poetry-core (==2.1.3)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.1.0)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "trove-classifiers (==2025.5.9.12)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.31.2)",
    "zstandard (==0.23.0)",
    "soupsieve (==2.7)"
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
